--- a/gasConsume.ipynb
+++ b/gasConsume.ipynb
@@ -3033,7 +3033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/1.png\" height=500 width=500></img>"
+    "<img src = \"https://github.com/iorellana18/gasPuntaArenas/raw/master/img/1.png\" height=500 width=500></img>"
    ]
   },
   {
@@ -3110,7 +3110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/5.png\" height=500 width=500></img>"
+    "<img src = \"https://github.com/iorellana18/gasPuntaArenas/raw/master/img/5.png\" height=500 width=500></img>"
    ]
   },
   {
