--- a/gasConsume.ipynb
+++ b/gasConsume.ipynb
@@ -3054,7 +3054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/2.png\" height=500 width=500></img>"
+    "<img src = \"https://github.com/iorellana18/gasPuntaArenas/raw/master/img/2.png\" height=500 width=500></img>"
    ]
   },
   {
@@ -3075,7 +3075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/3.png\" height=500 width=500></img>"
+    "<img src = \"https://github.com/iorellana18/gasPuntaArenas/raw/master/img/3.png\" height=500 width=500></img>"
    ]
   },
   {
@@ -3096,7 +3096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/4.png\" height=500 width=500></img>"
+    "<img src = \"https://github.com/iorellana18/gasPuntaArenas/raw/master/img/4.png\" height=500 width=500></img>"
    ]
   },
   {
