--- a/gasConsume.ipynb
+++ b/gasConsume.ipynb
@@ -3033,7 +3033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/1.png\" height=\"500\" width=\"500\"></img>"
+    "<img src=\"img/2.png\" width=800 /> ![](img/2.png)"
    ]
   },
   {
