--- a/gasConsume.ipynb
+++ b/gasConsume.ipynb
@@ -3033,7 +3033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/2.png\" width=800 /> ![](img/2.png)"
+    "<img src=\"img/1.png\" width=\"500\" />"
    ]
   },
   {
@@ -3054,7 +3054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/2.png\" height=\"500\" width=\"500\"></img>"
+    "<img src=\"img/2.png\" width=\"500\" />"
    ]
   },
   {
@@ -3075,7 +3075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/3.png\" height=\"500\" width=\"500\"></img>"
+    "<img src=\"img/3.png\" width=\"500\" />"
    ]
   },
   {
@@ -3096,7 +3096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/4.png\" height=\"500\" width=\"500\"></img>"
+    "<img src=\"img/4.png\" width=\"500\" />"
    ]
   },
   {
@@ -3110,7 +3110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"img/5.png\" height=\"500\" width=\"500\"></img>"
+    "<img src=\"img/5.png\" width=\"500\" />"
    ]
   },
   {
